--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,8 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# Inviduals
+data/3009680_p4.csv
+fig/
+test.py
